PFC-3494 Possible fix